# sega-controller

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  mega_drive.rs
src/mega_drive/: controller.rs
